# gRKPM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: blockInfo.h  control.h  gType.h  gxcEcho.h  gxcMath.h  gxcNodeSet.h  gxcType.h  rkpmCudaMethod.h  rkpmProlblem.h
src/: control.cxx  gblockInfo.cxx  gxcEcho.cxx  gxcMath.cxx  gxcNodeSet.cxx  main.cu  main.cxx  preprocess.cu  preprocess.cxx  readControl.cxx  rkpmCudaMethod.cu  solve.cu  stateInitiate.cu
